...
    "description": "Toast notification when meeting is unlocked by host"
  },
  "hide_profile_pictures": "Hide profile pictures",
  "picture_in_picture_mode": "Picture-in-picture mode",
  "security": "Security",
  "enable_waiting_room": "Enable waiting room",
  "hide_self_view": "Hide self view",
  "allow_all_participants_to": "Allow all participants to:",
  "chat": "Chat",
  "rename_themselves": "Rename themselves",
  "unmute_themselves": "Unmute themselves",
  "meeting": "Meeting",
  "show_meeting_timer": "Show meeting timer",
...
  "camera_max_bitrate": "Camera Max Bitrate",
  "screen_sharing_resolution": "Screen Sharing Resolution",
  "screen_sharing_max_bitrate": "Screen Sharing Max Bitrate",
  "export_debug_log": "Export Debug Log",
  "type_a_message": "Type a message...",
  "search_messages": "Search messages...",
  "meeting_chat": "Meeting Chat",
  "no_messages_found": "No messages found",
  "no_messages_yet": "No messages yet",
  "start_the_conversation": "Start the conversation",
  "unknown": "Unknown",
  "bitrate_extreme_high_2000": "Extreme High (2000 kbps)",
  "bitrate_ultra_high_1900": "Ultra High (1900 kbps)",
  "bitrate_ultra_high_1800": "Ultra High (1800 kbps)",
  "bitrate_ultra_high_1700": "Ultra High (1700 kbps)",
...
  "resolution_720p": "720p",
  "resolution_1080p": "1080p",
  "resolution_4k": "4K",
  "join_meeting": "Talk confidentially",
  "app_description": "Our end-to-end encrypted meetings protect privacy and empower truly free expression.",
  "meeting_link": "Meeting link",
  "meeting_detail": "Meeting detail",
  "display_name": "Your name",
  "enter_display_name": "Enter your name",
  "display_name_required": "Your name is required",
  "remember_display_name_on_device": "Remember my name on this device for future meetings",
  "join_meeting_button": "Join meeting",
  "create_meeting_button": "Create meeting",
  "import_meeting_button": "Import meeting",
  "import_meeting_title": "Import meeting",
  "import_meeting_hint_text": "Enter the meeting link",
  "open_home": "Open Home",
  "start_simulation": "Start Simulation",
...
